--- a/streamerbot/streamerbot.csproj
+++ b/streamerbot/streamerbot.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
   <ItemGroup>
     <Reference Include="AudioDevices">
       <HintPath>..\..\..\Program Files\Streamer.bot\AudioDevices.dll</HintPath>
@@ -202,7 +200,10 @@
     <Reference Include="StreamLabs">
       <HintPath>..\..\..\Program Files\Streamer.bot\StreamLabs.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+        <Reference Include="System.Data.SQLite">
+      <HintPath>..\..\..\Program Files\Streamer.bot\System.Data.SQLite.dll</HintPath>
+    </Reference>
+    <Reference Include="System"/>
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Program Files\Streamer.bot\System.Buffers.dll</HintPath>
@@ -214,7 +215,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Program Files\Streamer.bot\System.Collections.Immutable.dll</HintPath>
     </Reference>
-    <Reference Include="System.Core" />
+    <Reference Include="System.Core"/>
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Program Files\Streamer.bot\System.Memory.dll</HintPath>
@@ -259,14 +260,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Program Files\Streamer.bot\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System.ValueTuple" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.ServiceProcess" />
-    <Reference Include="System.Xml" />
+    
+    <Reference Include="System.ValueTuple"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    <Reference Include="Microsoft.CSharp"/>
+    <Reference Include="System.Data"/>
+    <Reference Include="System.Net.Http"/>
+    <Reference Include="System.ServiceProcess"/>
+    <Reference Include="System.Xml"/>
     <Reference Include="Twitch.ChatClient">
       <HintPath>..\..\..\Program Files\Streamer.bot\Twitch.ChatClient.dll</HintPath>
     </Reference>
@@ -289,5 +291,8 @@
       <HintPath>..\..\..\Program Files\Streamer.bot\websocket-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="System.Net.WebSockets.Client" Version="4.0.0"/>
+    <PackageReference Include="Websocket.Client" Version="4.5.0"/>
+  </ItemGroup>
 </Project>
